--- a/citas/style.css
+++ b/citas/style.css
@@ -242,5 +242,54 @@ footer {
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
-  
-  
+  .catalogo {
+    background-color:rgb(209, 184, 241);
+    padding: 20px;
+}
+
+.servicios-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.servicios-list li {
+    margin: 20px;
+    width: calc(33.33% - 20px);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.servicios-list img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.servicios-list h2 {
+    margin-top: 0;
+}
+
+.servicios-list p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.btn-ver-mas {
+    background-color: #5d4d81;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-ver-mas:hover {
+    background-color: #5d4d81;
+}
