--- a/vista_cliente/administrar_cita/style.css
+++ b/vista_cliente/administrar_cita/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: rgb(209, 184, 241);
+  background-color: rgb(207, 181, 241);
   margin: 20px;
 }
 
@@ -127,15 +127,16 @@ footer {
     background-color: #5d4d81;
     padding: 20px;
     text-align: center;
-    clear: both;
   }
   
   .footer-container {
-    width: 100%;
+    
     margin: 0 auto;
     padding: 20px;
   }
-  
+  .bg_footer{
+    background-color: #5d4d81;
+  }
   ul {
     list-style: none;
     margin: 0;
@@ -164,3 +165,4 @@ footer {
   .citabtn{
     margin-bottom: 300px;
   }
+ 
