--- a/style/style.css
+++ b/style/style.css
@@ -197,6 +197,7 @@ a:hover {
   margin: 40px auto;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  margin-bottom: 200px;
 }
 
 .contenedor-tabs {
@@ -740,3 +741,38 @@ footer p {
 .patient-profile-actions.btn {
   margin: 10px;
 }
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card1 {
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  background-color: #ddd;
+  margin-bottom: 200px;
+  margin-top:  50px; ;
+}
+
+.card1 h2 {
+  margin-top: 0;
+}
+
+.card-bodye {
+  padding: 20px;
+}
+
+.card-bodye p {
+  margin-bottom: 10px;
+}
+
+.card-bodye strong {
+  font-weight: bold;
+}
+
