--- a/vista_cliente/administrar_cita/style.css
+++ b/vista_cliente/administrar_cita/style.css
@@ -169,3 +169,29 @@ footer {
     margin-left:850px ;
 
   }
+  .pagination {
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  
+  .pagination ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+  }
+  
+  .pagination li {
+    display: inline-block;
+    margin: 0 10px;;
+  }
+  
+  .pagination a {
+    text-decoration: none;
+    color: #000000;
+  }
+  
+  .pagination a:hover {
+    color: #23527c;
+  }
