--- a/servicios/style.css
+++ b/servicios/style.css
@@ -1,49 +1,4 @@
-body {
-  font-family: "Open Sans", sans-serif;
-  background-color: rgb(209, 184, 241);
-}
-
-.arriba {
-  list-style-type: none;
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0;
-  background-color: #5d4d81;
-}
-
-.navbar_items {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar_items li {
-  margin: 0 15px;
-}
-
-.navbar_items a {
-  display: block;
-  color: #ffffff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.navbar_items a:hover {
-  background-color: #333;
-}
-
-.contenedor_icons {
-  display: flex;
-  align-items: center;
-}
-
-.contenedor_icons a {
-  margin-left: 15px;
-}
+@import url("../style/layout.css");
 
 .catalogo .container {
   max-width: 1200px;
